--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="myApp">
 <head>
 	<title></title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 	<link rel="stylesheet" href="css/chatbox.css" type="text/css">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular-route.min.js"></script>
 </head>
 <body>
 	<nav class="navbar navbar-default" role="navigation">
@@ -18,14 +20,14 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#">Title</a>
+				<a class="navbar-brand" href="#/">Title</a>
 			</div>
 	
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse navbar-ex1-collapse">
 				<ul class="nav navbar-nav">
-					<li class="active"><a href="#">Link</a></li>
-					<li><a href="#">Link</a></li>
+					<li><a href="#/">Home</a></li>
+					<li><a href="#/detail">Detail</a></li>
 				</ul>
 				<form class="navbar-form navbar-left" role="search">
 					<div class="form-group">
@@ -49,10 +51,12 @@
 		</div>
 	</nav>
 	<div class="container">
-		<div class="col-xs-12 col-sm-7 col-md-8 col-lg-9">
+		<div class="col-xs-12 col-sm-8 col-md-9 col-lg-10">
+			<div ng-view></div>
+			<script type="text/ng-template" id="pages/home.html">
 			<div class="col-sm-6 col-md-4 col-lg-3">
 				<div class="project-card">
-					<a href="#">
+					<a href="#/detail">
 						<div class="rect">
 							<p>ĐACK Web</p>
 						</div>
@@ -86,17 +90,23 @@
 					</a>
 				</div>
 			</div>
-			<div class="col-sm-6 col-md-4 col-lg-3">
-				<div class="project-card">
-					<a href="#">
-						<div class="rect">
-							<p>ĐACK Web</p>
-						</div>
-					</a>
+			</script>
+			<script type="text/ng-template" id="pages/detail.html">
+				<div class="project-detail">
+					<div class="list-tasks col-sm-4 col-md-4 col-lg-4">
+						<ul>
+						  <li><a href="#/detail">Home</a></li>
+						  <li><a href="#/detail">News</a></li>
+						  <li><a href="#/detail">Contact</a></li>
+						  <li><a href="#/detail">About</a></li>
+						</ul>
+					</div>
+					<div class="content-tasks col-sm-8 col-md-8 col-lg-8">
+					</div>
 				</div>
-			</div>	
+			</script>	
 		</div>
-		<div class="col-sm-5 col-md-4 col-lg-3">
+		<div class="col-sm-4 col-md-3 col-lg-2">
 			<!-- <div class="col-md-3"> -->
 		      <!-- DIRECT CHAT PRIMARY -->
 		      <div class="box box-primary direct-chat direct-chat-primary">
@@ -179,5 +189,6 @@
 		    </div>
 		<!-- </div> -->
 	</div>
+	<script src="js/app.js"></script>
 </body>
 </html>
