--- a/index.html
+++ b/index.html
@@ -3,16 +3,21 @@
 <head>
 	<title></title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/style.css" type="text/css">
-	<link rel="stylesheet" href="css/chatbox.css" type="text/css">
-	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
-  	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  	<script>document.write('<base href="' + document.location + '" />');</script>
-    <script data-require="angular.js@1.2.x" src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js" data-semver="1.2.26"></script>
-    <script data-require="angular.js@1.2.x" src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular-route.min.js" data-semver="1.2.26"></script>
-    <script src="js/app.js"></script>
+	<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
+	<link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css" >
+	<link rel="stylesheet" href="app.css">
+	<link rel="stylesheet" href="chat-box/chat-box.css">
+
+	<script src="bower_components/jquery/dist/jquery.js"></script>
+    <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/angular-animate/angular-animate.js"></script>
+
+    <script src="app.module.js"></script>
+	<script src="app.config.js"></script>
+   	<script src="project-list/project-list.component.js"></script>
+    <script src="project-detail/project-detail.component.js"></script>
+
 </head>
 <body>
 	 <nav class="navbar navbar-inverse">
@@ -30,7 +35,7 @@
 			<div ng-view></div>
 		</div>
 		<div class="col-sm-4 col-md-3 col-lg-2">
-			<div ng-include="'chatbox.html'"></div>     
+			<div ng-include="'chat-box/chat-box.html'"></div>     
 		</div>
 		<!-- </div> -->
 	</div>
