--- a/chat-box/chat-box.html
+++ b/chat-box/chat-box.html
@@ -1,7 +1,9 @@
 <!-- DIRECT CHAT PRIMARY -->
 <div class="box box-primary direct-chat direct-chat-primary">
     <div class="box-header with-border">
-	    <h3 class="box-title" ng-show="!bool">Friend</h3>
+	    <!-- <h3 class="box-title" ng-show="!bool">Friend</h3> -->
+	    <span>Chat with: </span>
+	    <select ng-model="friendId" ng-options="friend.id as friend.userName for friend in friends"></select>
 	    <div style="float: right;">
 		    <button type="button" ng-click="bool=!bool" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
 		    </button>
@@ -11,31 +13,21 @@
 	<div class="box-body" ng-show="!bool" class="fade">
 	<!-- Conversations are loaded here -->
 		<div class="direct-chat-messages">
-		    <div class="direct-chat-msg">
+		    <div ng-repeat="message in friends[friendId].message" class="direct-chat-msg">
 			    <div class="direct-chat-info clearfix">
-		            <span class="direct-chat-timestamp">Nguyễn Văn A</span>
+		            <span class="direct-chat-timestamp">{{message.user}}</span>
 		        </div>
-			    <div class="direct-chat-text">
-			    	Is this template really for free? That's unbelievable!
-			    </div>
-			</div>
-			<div class="direct-chat-msg">
-			    <div class="direct-chat-info clearfix">
-		            <span class="direct-chat-timestamp">Lê Thị C</span>
-		        </div>
-			    <div class="direct-chat-text">
-			    	You better believe it!
-			    </div>
+			    <div class="direct-chat-text">{{message.text}}</div>
 			</div>
 		</div>
 	</div>
 	<!-- .box-footer -->
 	<div class="box-footer" ng-show="!bool" class="fade">
-	    <form action="#" method="post">
+	    <form ng-submit="sendMessage()">
 		    <div class="input-group">
-		        <input type="text" name="message" placeholder="Type Message ..." class="form-control">
+		        <input type="text" ng-model="text" name="text" placeholder="Type Message ..." class="form-control"/>
 		        <span class="input-group-btn">
-			        <button type="submit" class="btn btn-primary btn-flat">Send</button>
+			    	<input type="submit" class="btn btn-primary btn-flat" value="Send" />
 		        </span>
 		    </div>
 		</form>
